# pytest-tutorial

./: .env.template  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/routers/: info.py  items.py  root.py
tests/routers/: test_info.py
