[tool.poetry]
name = "pytest-tutorial"
version = "0.1.0"
description = ""
authors = ["Revanth Vermareddy <vermareddyrevanth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
